--- a/sf__legacy_vagrant/Vagrantfile
+++ b/sf__legacy_vagrant/Vagrantfile
@@ -12,7 +12,8 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "mbr/postgres"
+  config.vm.box = "mortiko/postgres_8.4_sf"
+  config.vm.box_version = "1.0.0"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
