--- a/sf__legacy_vagrant/Vagrantfile
+++ b/sf__legacy_vagrant/Vagrantfile
@@ -1,30 +1,36 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "bento/ubuntu-22.04"
-  config.vm.host_name = "postgres"
-
-  config.ssh.insert_key = false
-  config.vm.provision "shell", inline: <<-SHELL
-    echo "Updating system"
-    apt-get update
-    apt-get dist-upgrade -y
-
-    echo "Installing postgres"
-    apt install -y postgresql postgresql-contrib
-
-    systemctl start postgresql.service
-
-    echo "Configuring and restarting PostgreSQL"
-    echo 'listen_addresses = '"'"'*'"'" >> /etc/postgresql/9.4/main/postgresql.conf
-    echo 'host    all             all             10.0.2.0/24            md5' >> /etc/postgresql/9.4/main/pg_hba.conf
-    systemctl restart postgresql.service
-
-    echo "Creating airat user and database"
-    echo "CREATE ROLE airat CREATEDB CREATEROLE CREATEUSER LOGIN UNENCRYPTED PASSWORD 'airat'" | sudo -u postgres psql -a -f -
-    echo "CREATE DATABASE testdb OWNER airat" | sudo -u postgres psql -a -f -
-
-    echo "Successfully created PostgreSQL dev virtual machine."
-    echo ""
-
-  SHELL
+    config.vm.box = "bento/ubuntu-22.04"
+    config.vm.host_name = "postgres"
   
-end
+    config.ssh.insert_key = false
+    config.vm.provision "shell", inline: <<-SHELL
+      echo "Updating system"
+      sudo apt-get update
+  
+      echo "Installing postgres"
+      sudo apt-get install -y postgresql postgresql-contrib
+  
+      systemctl start postgresql.service
+  
+      echo "Configuring and restarting PostgreSQL"
+      echo 'listen_addresses = '"'"'*'"'" >> /etc/postgresql/14/main/postgresql.conf
+      echo 'host    all             all             10.0.2.0/24            md5' >> /etc/postgresql/14/main/pg_hba.conf
+      systemctl restart postgresql.service
+  
+      echo "Creating airat user and database"
+  
+      echo "CREATE USER airat"
+      sudo -u postgres psql -c "CREATE USER airat WITH PASSWORD 'airat';"
+  
+      echo "CREATE ROLE admin WITH CREATEDB CREATEROLE"
+      sudo -u postgres psql -c "CREATE ROLE admin WITH CREATEDB CREATEROLE;"
+  
+      echo "CREATE DATABASE testdb OWNER airat"
+      sudo -u postgres psql -c "CREATE DATABASE testdb OWNER airat;"
+  
+      echo "Successfully created PostgreSQL dev virtual machine."
+      echo ""
+  
+    SHELL
+  
+  end
